--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <meta property="og:title" content="Daren Prince | Download Center for Press Kits, Brand Assets & VIP Content" />
   <meta property="og:description" content="Access essential press kits, images, promotional content, author bios, and exclusive content from author Daren Prince." />
-  <meta property="og:image" content="https://files.darenprince.com/og-image.jpg" /> <meta property="og:url" content="https://files.darenprince.com/" />
+  <meta property="og:image" content="https://files.darenprince.com/og-image.jpg" />
+  <meta property="og:url" content="https://files.darenprince.com/" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;800&display=swap" rel="stylesheet" />
@@ -22,29 +23,28 @@
     "url": "https://files.darenprince.com/",
     "about": {
       "@type": "Person",
-      "@id": "https://files.darenprince.com/#darenprince", /* Unique ID for Daren Prince */
+      "@id": "https://files.darenprince.com/#darenprince",
       "name": "Daren Prince",
-      "url": "https://www.darenprince.com/", /* Points to your main website for bio */
-      "image": "https://files.darenprince.com/daren-prince-profile-lg.jpg", /* URL to your large headshot */
+      "url": "https://www.darenprince.com/",
+      "image": "https://files.darenprince.com/daren-prince-profile-lg.jpg",
       "jobTitle": "Author",
       "worksFor": {
         "@type": "Organization",
-        "@id": "https://files.darenprince.com/#darenprincepublishing" /* Unique ID for Daren Prince Publishing */
+        "@id": "https://files.darenprince.com/#darenprincepublishing"
       },
       "sameAs": [
-        "https://www.goodreads.com/author/show/53671567.Daren_Prince", /* UPDATED: Specific Goodreads URL */
-        "https://www.amazon.com/author/darenprince" /* Amazon Author Profile */
-        /* ADD OTHER OFFICIAL SOCIAL MEDIA LINKS HERE ONCE THEY ARE LIVE */
+        "https://www.goodreads.com/author/show/53671567.Daren_Prince",
+        "https://www.amazon.com/author/darenprince"
       ]
     },
     "publisher": {
       "@type": "Organization",
-      "@id": "https://files.darenprince.com/#darenprincepublishing", /* Reused ID */
+      "@id": "https://files.darenprince.com/#darenprincepublishing",
       "name": "Daren Prince Publishing",
       "url": "https://www.darenprince.com",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://files.darenprince.com/logo-hires-black-for-light-bg.svg" /* Using the black SVG logo for schema */
+        "url": "https://files.darenprince.com/logo-hires-black-for-light-bg.svg"
       }
     }
   }
@@ -54,7 +54,7 @@
       height: 100%;
       margin: 0;
       padding: 0;
-      overflow-x: hidden; /* Prevent horizontal scroll from any element */
+      overflow-x: hidden;
     }
 
     body {
@@ -65,6 +65,7 @@
       background-color: #070A06;
       display: flex;
       flex-direction: column;
+      min-height: 100vh; /* Ensure body takes full viewport height for footer stickiness */
     }
 
     /* Loader */
@@ -93,9 +94,9 @@
       50% { transform: scale(1.05); opacity: 0.75; }
     }
 
-    /* === NEW NAVIGATION STYLES (MATCHING CODEPEN) === */
+    /* === NEW NAVIGATION STYLES === */
     .header-nav {
-      background-color: #212121;
+      background-color: rgba(0, 0, 0, 0.7); /* UPDATED: Transparent black background */
       box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
       position: sticky;
       top: 0;
@@ -110,11 +111,27 @@
     }
 
     .header-nav .logo img {
-      max-width: 100px;
+      max-width: 110px; /* UPDATED: Slightly larger logo */
       height: auto;
       display: block;
       padding: 0;
     }
+
+    .header-nav .tagline {
+      font-family: 'Urbanist', sans-serif;
+      font-weight: 800; /* Extra bold */
+      text-transform: uppercase;
+      color: #888; /* Medium dark gray */
+      font-size: 13px; /* Subtle font size */
+      margin-left: 15px; /* Space from logo */
+      white-space: nowrap; /* Prevent wrapping */
+    }
+
+    .logo-and-tagline {
+      display: flex;
+      align-items: center;
+    }
+
 
     /* Menu Button Styles (Hamburger) */
     .menu-btn {
@@ -179,7 +196,7 @@
       padding: 0;
       list-style: none;
       overflow: hidden;
-      background-color: #212121;
+      background-color: transparent; /* Changed to transparent for overlay effect */
       display: flex;
       align-items: center;
       height: auto;
@@ -196,7 +213,9 @@
       text-decoration: none;
       color: #D5D5D5;
       font-family: 'Urbanist', sans-serif;
-      font-weight: 500; /* Lighter font weight for nav */
+      font-weight: 800; /* UPDATED: All bold */
+      text-transform: uppercase; /* UPDATED: All caps */
+      font-size: 16px; /* UPDATED: Larger font size */
       transition: background-color 0.3s ease, color 0.3s ease;
     }
 
@@ -208,7 +227,7 @@
     /* Active Page Styling */
     .menu li a.active-page {
       color: #C2E9C1;
-      font-weight: 800;
+      font-weight: 800; /* Already 800, kept for consistency */
     }
 
     /* === END NEW NAVIGATION STYLES === */
@@ -216,6 +235,12 @@
     header {
       text-align: center;
       padding: 20px;
+      flex: 1; /* Allows header to take available space for centering */
+      display: flex;
+      flex-direction: column;
+      justify-content: center; /* Centers content vertically */
+      align-items: center; /* Centers content horizontally */
+      min-height: 150px; /* Adjust as needed for vertical space */
     }
 
     header img {
@@ -249,7 +274,7 @@
       padding: 40px 20px;
       max-width: 960px;
       margin: 0 auto;
-      flex: 1;
+      flex: 0 0 auto; /* Prevent main from growing/shrinking too much */
       box-sizing: border-box;
     }
 
@@ -262,6 +287,8 @@
       gap: 20px;
       flex-wrap: nowrap;
       text-align: left;
+      border: 1px solid rgba(194, 233, 193, 0.5); /* UPDATED: Green stroke */
+      box-shadow: 0 0 15px rgba(194, 233, 193, 0.2); /* UPDATED: Subtle lighting */
     }
 
     .file-entry img {
@@ -313,7 +340,7 @@
       border-radius: 5px;
       text-align: center;
       font-family: 'Urbanist', sans-serif;
-      font-weight: 500; /* Lighter font weight for buttons */
+      font-weight: 800; /* UPDATED: Thicker font weight for buttons */
       white-space: nowrap;
       transition: background-color 0.3s ease, color 0.3s ease; /* Add transition for hover */
     }
@@ -345,7 +372,16 @@
       font-family: 'Helvetica Neue', sans-serif;
     }
 
-    .footer-tagline {
+    footer h4 {
+      font-size: 18px; /* UPDATED: Larger font size for all footer headings */
+      text-transform: uppercase;
+      margin-bottom: 16px;
+      font-family: 'Urbanist', sans-serif;
+      font-weight: 800; /* Bold font weight */
+      text-align: left;
+    }
+    
+    .footer-tagline { /* No change needed for this specific h4 alignment */
       text-align: center;
       padding: 16px 0;
       margin-bottom: 25px;
@@ -361,25 +397,13 @@
       padding: 10px 0;
     }
 
-    footer h4 {
-      font-size: 14px;
-      text-transform: uppercase;
-      font-weight: 800; /* Bold font weight */
-      margin-bottom: 16px;
-      font-family: 'Urbanist', sans-serif;
-      text-align: left;
-    }
-    
-    footer div:nth-child(4) h4 {
-      text-align: center;
-    }
-
     .footer-icons {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
       gap: 20px;
       margin-top: 16px;
+      margin-bottom: 25px; /* Added space below social icons */
     }
 
     .footer-icons img {
@@ -393,13 +417,13 @@
       transform: scale(1.1);
     }
 
-    /* NEW: Styles for Bookstore Logos in Footer */
+    /* Styles for Bookstore Logos in Footer */
     .bookstore-logos {
       display: flex;
       justify-content: center;
       align-items: center;
       gap: 25px; /* Spacing between logos */
-      margin-top: 30px; /* Space above this section */
+      margin-top: 20px; /* Adjusted margin for clear separation */
       margin-bottom: 20px; /* Space below this section */
       flex-wrap: wrap; /* Allow wrapping on smaller screens */
       max-width: 80%; /* Total max width of the whole row */
@@ -409,18 +433,18 @@
 
     .bookstore-logos a {
       height: 32px; /* Set a consistent height for all logos */
-      display: flex; /* Use flex to center image if it doesn't fill height */
+      display: flex;
       align-items: center;
       justify-content: center;
-      flex-shrink: 0; /* Prevent shrinking below intended size */
+      flex-shrink: 0;
       transition: transform 0.2s ease, opacity 0.2s ease;
     }
 
     .bookstore-logos a img {
-      max-height: 100%; /* Ensure image fits within defined height */
-      max-width: 100%; /* Prevent stretching, maintain aspect ratio */
-      width: auto; /* Allow auto width based on height and aspect ratio */
-      height: auto; /* Allow auto height based on max-height */
+      max-height: 100%;
+      max-width: 100%;
+      width: auto;
+      height: auto;
       opacity: 0.9;
     }
 
@@ -452,31 +476,16 @@
         flex-basis: auto;
       }
 
-
-      footer h4 {
-        margin-top: 0 !important;
-      }
-
-      form {
-        flex-direction: column !important;
-        align-items: stretch !important;
-      }
-
-      form input,
-      form button {
-        width: 100%;
-        max-width: none;
-        margin-bottom: 10px;
-        box-sizing: border-box;
-      }
-
-      form button {
-        margin-bottom: 0;
-      }
-
-      /* === MOBILE NAVIGATION REVISION (SLIDE-OUT FROM LEFT) === */
+      /* Mobile Nav specific styles */
       .menu-icon {
         display: block;
+      }
+      .header-nav .logo-and-tagline {
+        justify-content: flex-start;
+        width: 100%;
+      }
+      .header-nav .tagline {
+        display: none; /* Hide tagline on small screens if space is tight */
       }
 
       .menu {
@@ -523,19 +532,40 @@
         background-color: rgba(0, 0, 0, 0.5);
         z-index: 2;
       }
-      /* === END MOBILE NAVIGATION REVISION === */
 
-      /* NEW: Mobile Styles for Bookstore Logos in Footer */
+      /* Footer adjustments for mobile */
+      footer h4 {
+        margin-top: 0 !important;
+      }
+
+      form {
+        flex-direction: column !important;
+        align-items: stretch !important;
+      }
+
+      form input,
+      form button {
+        width: 100%;
+        max-width: none;
+        margin-bottom: 10px;
+        box-sizing: border-box;
+      }
+
+      form button {
+        margin-bottom: 0;
+      }
+
+      /* Mobile Styles for Bookstore Logos in Footer */
       .bookstore-logos {
-        flex-direction: column; /* Stack vertically */
-        gap: 15px; /* Adjust vertical spacing */
+        flex-direction: column;
+        gap: 15px;
       }
       .bookstore-logos a {
-        width: 45%; /* 45% width for each item */
-        height: auto; /* Auto height on mobile */
+        width: 45%;
+        height: auto;
       }
       .bookstore-logos a img {
-        width: 100%; /* Image takes full width of its container */
+        width: 100%;
         height: auto;
       }
     }
@@ -548,21 +578,22 @@
   </div>
 
   <nav class="header-nav">
-    <a href="https://www.darenprince.com" class="logo">
-      <img src="logo-white.png" alt="Daren Prince Official Logo" /> </a>
+    <div class="logo-and-tagline">
+      <a href="https://www.darenprince.com" class="logo">
+        <img src="logo-white.png" alt="Daren Prince Official Logo" />
+      </a>
+      <span class="tagline">IT'S TIME TO LEVEL UP.</span> </div>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
       <li><a href="https://www.darenprince.com/bio">Bio</a></li>
       <li><a href="https://www.darenprince.com/books">Books</a></li>
       <li><a href="mailto:press@darenprince.com">Press</a></li>
-      <li><a href="#" class="active-page">Download Center</a></li>
-      <li><a href="mailto:contact@darenprince.com">Contact</a></li>
+      <li><a href="#" class="active-page">Downloads</a></li> <li><a href="mailto:contact@darenprince.com">Contact</a></li>
     </ul>
   </nav>
 
-  <header>
-    <h1>Download Center</h1>
+  <header> <h1>Download Center</h1>
     <p class="intro-text">
       Welcome to the official Download Center for Daren Prince. This is your one-stop hub for press kits, brand assets, media releases, and exclusive bonus content available to VIP subscribers and media professionals.
     </p>
@@ -611,8 +642,31 @@
         </ul>
       </div>
 
+      <div style="flex: 1 1 280px;">
+        <div class="footer-tagline">
+          <img src="tagline.png" alt="Burn the Mask. Speak the Truth.">
+        </div>
+        <h4 style="background: linear-gradient(90deg,#C2E9C1,#6DA667); -webkit-background-clip: text; color: transparent; margin-top: 40px; text-align: center;">
+          Also Available On:
+        </h4>
+        <div class="bookstore-logos">
+          <a href="https://www.amazon.com/author/darenprince" target="_blank" aria-label="Find Daren Prince books on Amazon">
+            <img src="amazon.png" alt="Amazon Books Logo">
+          </a>
+          <a href="https://www.goodreads.com/author/show/53671567.Daren_Prince" target="_blank" aria-label="Find Daren Prince books on Goodreads">
+            <img src="goodreads.png" alt="Goodreads Logo">
+          </a>
+          <a href="https://apple.co/45SmJH4" target="_blank" aria-label="Find Daren Prince books on Apple Books">
+            <img src="ibooks.png" alt="Apple Books Logo">
+          </a>
+          <a href="https://play.google.com/store/books/details/Daren Prince Game On Master The Conversation Win H?id=BYFbEQAAQBAJ" target="_blank" aria-label="Find Daren Prince books on Google Play Books">
+            <img src="googleplay.png" alt="Google Play Books Logo">
+          </a>
+        </div>
+      </div>
+
       <div style="flex: 1 1 250px;">
-        <h4 style="font-size: 16px; background: linear-gradient(90deg,#87BD72,#456F3A); -webkit-background-clip: text; color: transparent;">
+        <h4 style="background: linear-gradient(90deg,#87BD72,#456F3A); -webkit-background-clip: text; color: transparent;">
           Stay Connected
         </h4>
         <p style="font-size: 15px; color: #B8BAB7; margin-bottom: 14px;">
@@ -634,13 +688,7 @@
             Join →
           </button>
         </form>
-      </div>
-
-      <div style="flex: 1 1 280px;">
-        <div class="footer-tagline">
-          <img src="tagline.png" alt="Burn the Mask. Speak the Truth.">
-        </div>
-        <h4 style="font-size: 13px; background: linear-gradient(90deg,#C2E9C1,#6DA667); -webkit-background-clip: text; color: transparent;">
+        <h4 style="font-size: 13px; background: linear-gradient(90deg,#C2E9C1,#6DA667); -webkit-background-clip: text; color: transparent; margin-top: 30px;">
           Follow & Connect
         </h4>
         <div class="footer-icons">
@@ -651,25 +699,8 @@
           <a href="https://www.tiktok.com/@darenprince" target="_blank"><img src="tiktok-32.png" alt="TikTok Icon"></a>
           <a href="#"><img src="twitter-x-32.png" alt="Twitter X Icon"></a>
         </div>
+      </div>
 
-        <h4 style="font-size: 13px; background: linear-gradient(90deg,#C2E9C1,#6DA667); -webkit-background-clip: text; color: transparent; margin-top: 30px;">
-          Also Available On:
-        </h4>
-        <div class="bookstore-logos">
-          <a href="https://www.amazon.com/author/darenprince" target="_blank" aria-label="Find Daren Prince books on Amazon">
-            <img src="amazon.png" alt="Amazon Books Logo">
-          </a>
-          <a href="https://www.goodreads.com/author/show/53671567.Daren_Prince" target="_blank" aria-label="Find Daren Prince books on Goodreads">
-            <img src="goodreads.png" alt="Goodreads Logo">
-          </a>
-          <a href="https://apple.co/45SmJH4" target="_blank" aria-label="Find Daren Prince books on Apple Books">
-            <img src="ibooks.png" alt="Apple Books Logo">
-          </a>
-          <a href="https://play.google.com/store/books/details/Daren Prince Game On Master The Conversation Win H?id=BYFbEQAAQBAJ" target="_blank" aria-label="Find Daren Prince books on Google Play Books">
-            <img src="googleplay.png" alt="Google Play Books Logo">
-          </a>
-        </div>
-        </div>
     </div>
 
     <div style="margin-top: 60px; text-align: center; font-size: 12px; color: #5F5F5F;">
@@ -680,6 +711,8 @@
         <a href="#" style="color:#87BD72; text-decoration:none; margin: 0 8px;">Privacy</a>
         |
         <a href="#" style="color:#87BD72; text-decoration:none; margin: 0 8px;">Compliance</a>
+        |
+        <a href="mailto:contact@darenprince.com" style="color:#87BD72; text-decoration:none; margin: 0 8px;">Contact</a>
       </p>
     </div>
   </footer>
