--- a/index.html
+++ b/index.html
@@ -377,6 +377,11 @@
         padding: 30px 20px; 
         margin-top: 60px; /* Space between main footer content and this bar */
     }
+    /* Media Queries for Responsiveness */
+    @media (max-width: 1199px) { /* Applies to screens smaller than 1200px */
+        .main-content-wrapper {
+            background-image: url('bg-mobile.jpg'); /* Mobile specific background */
+        }
 
     /* Helper class to center content within full-width sections */
     .content-wrapper {
