--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
       }
       .header-nav .tagline {
         display: block; /* IMPORTANT CHANGE: Make tagline visible on mobile */
-        font-size: 13px; /* ADJUSTED: Slightly larger font size for mobile tagline */
+        font-size: 15px; /* ADJUSTED: Slightly larger font size for mobile tagline */
         margin-left: 10px; /* Adjust margin if needed */
         margin-right: auto; /* Push menu icon to the right */
       }
@@ -561,18 +561,15 @@
         box-sizing: border-box;
       }
 
-      form button {
-        margin-top: 10px; /* Added for separation between input and button on mobile */
-        margin-bottom: 0;
-      }
+  
 
       /* Mobile Styles for Bookstore Logos in Footer */
       .bookstore-logos {
         flex-direction: column;
-        gap: 15px;
+        gap: 18px;
       }
       .bookstore-logos a {
-        width: 45%;
+        width: 40%;
         height: auto;
       }
       .bookstore-logos a img {
@@ -593,14 +590,14 @@
       <a href="https://www.darenprince.com" class="logo">
         <img src="logo-white.png" alt="Daren Prince Official Logo" />
       </a>
-      <span class="tagline">IT'S TIME TO LEVEL UP.</span>
+      <span class="tagline">IT'S TIME TO LEVEL UP!</span>
     </div>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-      <li><a href="https://www.darenprince.com/bio">Bio</a></li>
-      <li><a href="https://www.darenprince.com/books">Books</a></li>
-      <li><a href="mailto:press@darenprince.com">Press</a></li>
+      <li><a href="https://darenprince.com/#page-0">Bio</a></li>
+      <li><a href="https://darenprince.com/#page-1">Books</a></li>
+      <li><a href="https://files.darenprince.com">Press</a></li>
       <li><a href="#" class="active-page">Downloads</a></li> <li><a href="mailto:contact@darenprince.com">Contact</a></li>
     </ul>
   </nav>
@@ -609,7 +606,7 @@
 
   <header> <h1>Download Center</h1>
     <p class="intro-text">
-      Welcome to the official Download Center for Daren Prince. This is your one-stop hub for press kits, brand assets, media releases, and exclusive bonus content available to VIP subscribers and media professionals.
+      Welcome to the official Download Center for Daren Prince. This is your one stop hub for press kits, brand assets, media releases, and exclusive bonus content available to VIP subscribers and media professionals.
     </p>
   </header>
 
@@ -623,7 +620,7 @@
             <div class="file-name">Game On! – Official Press Kit & Brand Guidelines (US/EU Version)</div>
         </a>
         <p style="font-size: 14px; margin-bottom: 14px; color: #D5D5D5;">
-          Includes high-resolution cover art, author bio, ISBNs, audiobook runtime, brand color palette, and everything media pros need.
+          Includes high resolution images, author bio, metadata,press releases, author bios, brand identity, and everything media pros need.
         </p>
         <div class="buttons">
           <a class="btn view-btn" href="press-kit.html" aria-label="View Game On! Press Kit page">View</a>
@@ -638,10 +635,10 @@
 
                 <div style="flex: 1 1 200px;">
                     <a href="https://www.darenprince.com">
-                        <img src="logo-footer-white.png" alt="Daren Prince Footer Logo" style="max-width: 100px; margin-bottom: 20px;" />
+                        <img src="logo-footer-white.png" alt="Daren Prince Footer Logo" style="max-width: 117px; margin-bottom: 15px;" />
                     </a>
-                    <p style="font-size: 14px; line-height: 1.6; color: #B8BAB7;">
-                        Daren Prince is the unapologetic voice behind <em>Game On!</em> — helping men master the conversation, elevate their presence, and spark real connection through confidence and emotional intelligence.
+                    <p style="font-size: 14px; line-height: 1.2; color: #B8BAB7;">
+                        Daren Prince is the unapologetic voice behind <em>Game On!</em>, helping men master the conversation and spark real connection through confidence and emotional intelligence.
                     </p>
                 </div>
 
@@ -650,9 +647,9 @@
                         Explore
                     </h4>
                     <ul style="list-style: none; padding: 0; margin: 0; font-size: 14px; line-height: 1.9;">
-                        <li><a href="https://www.darenprince.com/bio" style="color: #D5D5D5; font-weight: bold; text-decoration: none;">Bio</a></li>
-                        <li><a href="https://www.darenprince.com/books" style="color: #D5D5D5; font-weight: bold; text-decoration: none;">Books</a></li>
-                        <li><a href="mailto:press@darenprince.com">Press</a></li>
+                        <li><a href="https://darenprince.com/#page-0" style="color: #D5D5D5; font-weight: bold; text-decoration: none;">Bio</a></li>
+                        <li><a href="https://darenprince.com/#page-1" style="color: #D5D5D5; font-weight: bold; text-decoration: none;">Books</a></li>
+                        <li><a href="https://files.darenprince.com">Press</a></li>
                         <li><a href="mailto:contact@darenprince.com" style="color: #D5D5D5; font-weight: bold; text-decoration: none;">Contact</a></li>
                     </ul>
                 </div>
@@ -661,8 +658,8 @@
                     <h4 style="background: linear-gradient(90deg,#87BD72,#456F3A); -webkit-background-clip: text; color: transparent;">
                         Stay Connected
                     </h4>
-                    <p style="font-size: 15px; color: #B8BAB7; margin-bottom: 14px;">
-                        Get exclusive updates, content & early access direct from Daren Prince.
+                    <p style="font-size: 16px; color: #B8BAB7; margin-bottom: 14px;">
+                        Get exclusive updates, content & early access direct from author Daren Prince.
                     </p>
                     <form action="mailto:press@darenprince.com" method="POST" enctype="text/plain" style="display: flex; flex-wrap: nowrap; align-items: center; gap: 10px;">
                         <input
@@ -728,7 +725,7 @@
                     <a href="#" style="color:#87BD72; text-decoration:none; margin: 0 8px;">Compliance</a>
                     |
                     <a href="mailto:contact@darenprince.com" style="color:#87BD72; text-decoration:none; margin: 0 8px;">Contact</a>
-                </p>
+                </p> </p> </p>
             </div>
         </div> </div> </footer>
 
