--- a/index.html
+++ b/index.html
@@ -373,9 +373,9 @@
 
     /* Styles for the very bottom copyright/links bar */
     .footer-bottom-bar {
-        background-color: #0A0A0A; /* Darker grey/almost black */
+        background-color: #1F1F1F; /* Darker grey/almost black */
         padding: 30px 20px; 
-        margin-top: 60px; /* Space between main footer content and this bar */
+        margin-top: 0px; /* Space between main footer content and this bar */
     }
     /* Media Queries for Responsiveness */
     @media (max-width: 1199px) { /* Applies to screens smaller than 1200px */
