--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       align-items: center;
       justify-content: center;
       z-index: 9999;
-      transition: opacity 0.8s ease;
+      transition: opacity 1.0s ease;
     }
 
     #loader img {
@@ -107,14 +107,15 @@
       justify-content: space-between;
       align-items: center;
       box-sizing: border-box;
-      min-height: 70px;
+      min-height: 74px;
     }
 
     .header-nav .logo img {
-      max-width: 110px; /* Slightly larger logo */
+      max-width: 120px; /* Slightly larger logo */
       height: auto;
       display: block;
       padding: 0;
+      padding-top: 5;
     }
 
     .header-nav .tagline {
@@ -254,16 +255,16 @@
 
     h1 {
       text-align: center;
-      font-size: 18px;
+      font-size: 19px;
       letter-spacing: 1px;
       text-transform: uppercase;
-      margin-bottom: 10px;
+      margin-bottom: 14px;
     }
 
     .intro-text {
       text-align: center;
       max-width: 700px;
-      margin: 0 auto 20px; /* ADJUSTED: Less space below intro text */
+      margin: 0 auto 25px; /* ADJUSTED: Less space below intro text */
       font-size: 15px;
       color: #D5D5D5;
       line-height: 1.6;
