--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "Download Center | Daren Prince",
+    "name": "Media Download Center | Daren Prince | Author",
     "description": "Access essential press kits, images, promotional content, author bios, and exclusive content from author Daren Prince.",
     "url": "https://files.darenprince.com/",
     "about": {
@@ -102,7 +102,7 @@
       top: 0;
       width: 100%;
       z-index: 3;
-      padding: 15px 20px;
+      padding: 18px 22px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -130,7 +130,7 @@
 
     .logo-and-tagline {
       display: flex;
-      align-items: center;
+      align-items: top;
     }
 
     /* Menu Button Styles (Hamburger) */
