--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
       font-family: 'Urbanist', sans-serif;
       font-weight: 800; /* Extra bold */
       text-transform: uppercase;
-      color: #888; /* Medium dark gray */
+      color: #587F53; /* Medium dark gray */
       font-size: 13px; /* Subtle font size */
-      margin-left: 15px; /* Space from logo */
+      margin-left: 20px; /* Space from logo */
       white-space: nowrap; /* Prevent wrapping */
     }
 
     .logo-and-tagline {
       display: flex;
-      align-items: top;
+      align-items: center;
     }
 
     /* Menu Button Styles (Hamburger) */
@@ -141,7 +141,7 @@
     .menu-icon {
       cursor: pointer;
       display: none;
-      padding: 10px;
+      padding: 7px;
       position: relative;
       user-select: none;
       z-index: 5;
@@ -150,9 +150,9 @@
     .menu-icon .navicon {
       background: #FDFDFD;
       display: block;
-      height: 2px;
+      height: 4px;
       position: relative;
-      transition: background .2s ease-out;
+      transition: background .4s ease-out;
       width: 20px;
     }
 
@@ -163,16 +163,16 @@
       display: block;
       height: 100%;
       position: absolute;
-      transition: all .2s ease-out;
+      transition: all .4s ease-out;
       width: 100%;
     }
 
     .menu-icon .navicon:before {
-      top: 6px;
+      top: 8px;
     }
 
     .menu-icon .navicon:after {
-      top: -6px;
+      top: 8px;
     }
 
     /* Hamburger Animation */
@@ -215,8 +215,8 @@
       font-family: 'Urbanist', sans-serif;
       font-weight: 800; /* All bold */
       text-transform: uppercase; /* All caps */
-      font-size: 16px; /* Larger font size */
-      transition: background-color 0.3s ease, color 0.3s ease;
+      font-size: 18px; /* Larger font size */
+      transition: background-color 0.4s ease, color 0.3s ease;
     }
 
     .menu li a:hover {
@@ -240,7 +240,7 @@
       flex-direction: column;
       justify-content: center; /* Centers content vertically */
       align-items: center; /* Centers content horizontally */
-      min-height: 200px; /* Space above the page heading */
+      min-height: 220px; /* Space above the page heading */
     }
 
     header img {
@@ -258,21 +258,21 @@
       font-size: 19px;
       letter-spacing: 1px;
       text-transform: uppercase;
-      margin-bottom: 14px;
+      margin-bottom: 15px;
     }
 
     .intro-text {
       text-align: center;
       max-width: 700px;
-      margin: 0 auto 25px; /* ADJUSTED: Less space below intro text */
+      margin: 0 auto 20px; /* ADJUSTED: Less space below intro text */
       font-size: 15px;
       color: #D5D5D5;
-      line-height: 1.6;
+      line-height: 1.5;
     }
 
     main {
       padding: 40px 20px;
-      max-width: 960px;
+      max-width: 870px;
       margin: 0 auto;
       flex: 0 0 auto;
       box-sizing: border-box;
@@ -288,7 +288,7 @@
       flex-wrap: nowrap;
       text-align: left;
       border: 1px solid rgba(194, 233, 193, 0.5); /* Green stroke */
-      box-shadow: 0 0 15px rgba(194, 233, 193, 0.2); /* Subtle lighting */
+      box-shadow: 0 0 13px rgba(194, 233, 193, 0.2); /* Subtle lighting */
       margin-bottom: 40px; /* NEW: More space below the download block */
     }
 
@@ -315,12 +315,12 @@
 
     .file-name {
       font-family: 'Urbanist', sans-serif;
-      font-weight: 800;
+      font-weight: 700;
       margin-bottom: 10px;
       cursor: pointer;
     }
     .file-name:hover {
-        color: #C2E9C1;
+        color: #8CD679;
     }
 
 
@@ -336,9 +336,9 @@
       border-radius: 5px;
       text-align: center;
       font-family: 'Urbanist', sans-serif;
-      font-weight: 800; /* Thicker font weight for buttons */
+      font-weight: 700; /* Thicker font weight for buttons */
       white-space: nowrap;
-      transition: background-color 0.3s ease, color 0.3s ease;
+      transition: background-color 0.5s ease, color 0.5s ease;
     }
 
     a.btn.view-btn {
@@ -368,18 +368,18 @@
 
     /* Styles for the main footer content area */
     .footer-main-content {
-        background-color: #212121; /* Lighter dark grey */
-        padding: 60px 20px; 
+        background-color: #313131; /* Lighter dark grey */
+        padding: 50px 20px; 
     }
 
     /* Styles for the very bottom copyright/links bar */
     .footer-bottom-bar {
-        background-color: #1F1F1F; /* Darker grey/almost black */
-        padding: 30px 20px; 
+        background-color: #2f2f2f; /* Darker grey/almost black */
+        padding: 27px 20px; 
         margin-top: 0px; /* Space between main footer content and this bar */
     }
     /* Media Queries for Responsiveness */
-    @media (max-width: 1199px) { /* Applies to screens smaller than 1200px */
+    @media (max-width: 1329px) { /* Applies to screens smaller than 1350px */
         .main-content-wrapper {
             background-image: url('bg-mobile.jpg'); /* Mobile specific background */
         }
@@ -410,7 +410,7 @@
     footer h4 {
       font-size: 18px; /* Larger font size for all footer headings */
       text-transform: uppercase;
-      margin-bottom: 16px;
+      margin-bottom: 17px;
       font-family: 'Urbanist', sans-serif;
       font-weight: 800;
       text-align: left;
@@ -420,20 +420,20 @@
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 15px; /* Space from heading above */
+      gap: 22px;
+      margin-top: 18px; /* Space from heading above */
       margin-bottom: 25px; /* Space below social icons */
     }
 
     .footer-icons img {
-      width: 24px;
-      height: 24px;
+      width: auto;
+      height: 23px;
       opacity: 0.9;
-      transition: transform 0.2s ease;
+      transition: transform 0.4s ease;
     }
 
     .footer-icons img:hover {
-      transform: scale(1.1);
+      transform: scale(1.2);
     }
 
     /* Styles for Bookstore Logos in Footer */
@@ -441,19 +441,19 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 25px;
-      margin-top: 15px; /* Space from heading above */
-      margin-bottom: 60px; /* IMPORTANT CHANGE: Increased space below bookstore logos */
+      gap: 28px;
+      margin-top: 17px; /* Space from heading above */
+      margin-bottom: 69px; /* IMPORTANT CHANGE: Increased space below bookstore logos */
       flex-wrap: wrap;
     }
 
     .bookstore-logos a {
-      height: 32px;
+      height: 30px;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-shrink: 0;
-      transition: transform 0.2s ease, opacity 0.2s ease;
+      transition: transform 0.4s ease, opacity 0.3s ease;
     }
 
     .bookstore-logos a img {
@@ -465,7 +465,7 @@
     }
 
     .bookstore-logos a:hover {
-      transform: scale(1.05);
+      transform: scale(1.1);
       opacity: 1;
     }
 
@@ -477,10 +477,10 @@
         left: 0;
         width: 100vw;
         height: 100vh;
-        background-color: rgba(0, 0, 0, 0.5); /* Dimming overlay */
+        background-color: rgba(0, 0, 0, 0.6); /* Dimming overlay */
         z-index: 2; /* Below menu (z-index 4), above header-nav (z-index 3) */
         display: none; /* Hidden by default, shown by JS */
-        transition: background-color 0.3s ease; /* Smooth fade in/out */
+        transition: background-color 0.4s ease; /* Smooth fade in/out */
     }
 
 
@@ -516,8 +516,8 @@
       }
       .header-nav .tagline {
         display: block; /* IMPORTANT CHANGE: Make tagline visible on mobile */
-        font-size: 15px; /* ADJUSTED: Slightly larger font size for mobile tagline */
-        margin-left: 10px; /* Adjust margin if needed */
+        font-size: 16px; /* ADJUSTED: Slightly larger font size for mobile tagline */
+        margin-left: 16px; /* Adjust margin if needed */
         margin-right: auto; /* Push menu icon to the right */
       }
 
@@ -525,14 +525,14 @@
         position: fixed;
         top: 0;
         left: 0;
-        width: 280px; /* UPDATED: Wider menu */
+        width: 300px; /* UPDATED: Wider menu */
         height: 100%;
-        background-color: #313131;
+        background-color: #2f2f2f;
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
         padding-top: 80px;
-        transition: transform 0.3s ease-out;
+        transition: transform 0.4s ease-out;
         transform: translateX(-100%); /* Hidden by default on mobile */
         box-sizing: border-box;
         z-index: 4;
@@ -544,7 +544,7 @@
       }
       
       .footer-tagline-moved img {
-        max-width: 70%; /* Adjusted for mobile view */
+        max-width: 68%; /* Adjusted for mobile view */
       }
 
 
@@ -556,9 +556,10 @@
 
       form input,
       form button {
-        width: 100%;
+        width: 90%;
+        height: 45px;
         max-width: none;
-        margin-bottom: 10px; /* Default margin for stacked elements */
+        margin-bottom: 8px; /* Default margin for stacked elements */
         box-sizing: border-box;
       }
 
@@ -567,11 +568,11 @@
       /* Mobile Styles for Bookstore Logos in Footer */
       .bookstore-logos {
         flex-direction: column;
-        gap: 18px;
+        gap: 20px;
       }
       .bookstore-logos a {
-        width: 40%;
-        height: auto;
+        width: auto;
+        height: 65px;
       }
       .bookstore-logos a img {
         width: 100%;
