--- a/index.html
+++ b/index.html
@@ -556,10 +556,10 @@
 
       form input,
       form button {
-        width: 90%;
-        height: 45px;
+        width: 100%;
+        height: 48px;
         max-width: none;
-        margin-bottom: 8px; /* Default margin for stacked elements */
+        margin-bottom: 6px; /* Default margin for stacked elements */
         box-sizing: border-box;
       }
 
@@ -572,11 +572,11 @@
       }
       .bookstore-logos a {
         width: auto;
-        height: 65px;
+        height: 70px;
       }
       .bookstore-logos a img {
-        width: 100%;
-        height: auto;
+        width: auto;
+        height: 70px;
       }
     }
   </style>
@@ -674,7 +674,7 @@
                         />
                         <button
                           type="submit"
-                          style="padding: 12px 16px; background-color: #456F3A; border: none; color: white; border-radius: 4px; white-space: nowrap; margin-top: 10px;" /* TALLER BUTTON & MORE PADDING ABOVE */
+                          style="padding: 12px 16px; background-color: #456F3A; border: none; color: white; border-radius: 4px; white-space: nowrap; margin-top: 6px;" /* TALLER BUTTON & MORE PADDING ABOVE */
                         >
                           Join →
                         </button>
