--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
     #loader img {
       width: 280px;
       max-width: 80%;
-      animation: pulse 2s infinite ease-in-out;
+      animation: pulse 1.5s infinite ease-in-out;
     }
 
     @keyframes pulse {
-      0%, 100% { transform: scale(1); opacity: 1; }
+      0%, 100% { transform: scale(0.95); opacity: 1; }
       50% { transform: scale(1.05); opacity: 0.75; }
     }
 
@@ -107,15 +107,15 @@
       justify-content: space-between;
       align-items: center;
       box-sizing: border-box;
-      min-height: 74px;
+      min-height: 70px;
     }
 
     .header-nav .logo img {
-      max-width: 120px; /* Slightly larger logo */
+      max-width: 110px; /* Slightly larger logo */
       height: auto;
       display: block;
       padding: 0;
-      padding-top: 5;
+      padding-top: 10;
     }
 
     .header-nav .tagline {
@@ -123,8 +123,8 @@
       font-weight: 800; /* Extra bold */
       text-transform: uppercase;
       color: #587F53; /* Medium dark gray */
-      font-size: 13px; /* Subtle font size */
-      margin-left: 20px; /* Space from logo */
+      font-size: 16px; /* Subtle font size */
+      margin-left: 25px; /* Space from logo */
       white-space: nowrap; /* Prevent wrapping */
     }
 
@@ -168,7 +168,7 @@
     }
 
     .menu-icon .navicon:before {
-      top: 8px;
+      top: 6px;
     }
 
     .menu-icon .navicon:after {
@@ -209,13 +209,13 @@
 
     .menu li a {
       display: block;
-      padding: 15px 20px;
+      padding: 18px 20px;
       text-decoration: none;
       color: #D5D5D5;
       font-family: 'Urbanist', sans-serif;
       font-weight: 800; /* All bold */
       text-transform: uppercase; /* All caps */
-      font-size: 18px; /* Larger font size */
+      font-size: 14px; /* Larger font size */
       transition: background-color 0.4s ease, color 0.3s ease;
     }
 
@@ -293,9 +293,9 @@
     }
 
     .file-entry img {
-      max-width: 60px;
+      max-width: 65px;
       height: auto;
-      border-radius: 4px;
+      border-radius: 3px;
       flex-shrink: 0;
       align-self: flex-start;
     }
@@ -374,9 +374,10 @@
 
     /* Styles for the very bottom copyright/links bar */
     .footer-bottom-bar {
-        background-color: #2f2f2f; /* Darker grey/almost black */
+        background-color: #1f1f1f; /* Darker grey/almost black */
         padding: 27px 20px; 
         margin-top: 0px; /* Space between main footer content and this bar */
+   margin-bottom: 40px;
     }
     /* Media Queries for Responsiveness */
     @media (max-width: 1329px) { /* Applies to screens smaller than 1350px */
@@ -422,7 +423,7 @@
       flex-wrap: wrap;
       gap: 22px;
       margin-top: 18px; /* Space from heading above */
-      margin-bottom: 25px; /* Space below social icons */
+      margin-bottom: 22px; /* Space below social icons */
     }
 
     .footer-icons img {
@@ -557,7 +558,7 @@
       form input,
       form button {
         width: 100%;
-        height: 48px;
+        height: 50px;
         max-width: none;
         margin-bottom: 6px; /* Default margin for stacked elements */
         box-sizing: border-box;
@@ -572,11 +573,11 @@
       }
       .bookstore-logos a {
         width: auto;
-        height: 70px;
+        height: 65px;
       }
       .bookstore-logos a img {
         width: auto;
-        height: 70px;
+        height: 65px;
       }
     }
   </style>
