--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     .menu-icon .navicon:before,
     .menu-icon .navicon:after {
       background: #FDFDFD;
-      content: '';
+      content: ''';
       display: block;
       height: 100%;
       position: absolute;
@@ -380,7 +380,7 @@
    margin-bottom: 40px;
     }
     /* Media Queries for Responsiveness */
-    @media (max-width: 1329px) { /* Applies to screens smaller than 1350px */
+    @media (min-width: 1300px) { /* Applies to screens smaller than 1350px */
         .main-content-wrapper {
             background-image: url('bg-mobile.jpg'); /* Mobile specific background */
         }
