--- a/index.html
+++ b/index.html
@@ -380,14 +380,14 @@
    margin-bottom: 40px;
     }
     /* Media Queries for Responsiveness */
-    @media (min-width: 1300px) { /* Applies to screens smaller than 1350px */
+    @media (max-width: 1280px) { /* Applies to screens smaller than 1350px */
         .main-content-wrapper {
             background-image: url('bg-mobile.jpg'); /* Mobile specific background */
         }
 
     /* Helper class to center content within full-width sections */
     .content-wrapper {
-        max-width: 1200px; /* Max width for content inside footer sections */
+        max-width: 1280px; /* Max width for content inside footer sections */
         margin-left: auto;
         margin-right: auto;
     }
