--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     .menu-icon .navicon:before,
     .menu-icon .navicon:after {
       background: #FDFDFD;
-      content: ''';
+      content: '';
       display: block;
       height: 100%;
       position: absolute;
@@ -361,28 +361,31 @@
     footer {
       flex-shrink: 0;
       color: #D5D5D5;
-      padding: 0; 
+      padding: 0;
       font-family: 'Helvetica Neue', sans-serif;
-      overflow: hidden; 
+      overflow: hidden;
     }
 
     /* Styles for the main footer content area */
     .footer-main-content {
         background-color: #313131; /* Lighter dark grey */
-        padding: 50px 20px; 
+        padding: 50px 20px;
     }
 
     /* Styles for the very bottom copyright/links bar */
     .footer-bottom-bar {
         background-color: #1f1f1f; /* Darker grey/almost black */
-        padding: 27px 20px; 
+        padding: 27px 20px;
         margin-top: 0px; /* Space between main footer content and this bar */
    margin-bottom: 40px;
     }
     /* Media Queries for Responsiveness */
     @media (max-width: 1280px) { /* Applies to screens smaller than 1350px */
-        .main-content-wrapper {
+        body { /* Targeting the body directly as previously suggested */
             background-image: url('bg-mobile.jpg'); /* Mobile specific background */
+            background-size: cover;
+            background-position: center top;
+            background-attachment: fixed;
         }
 
     /* Helper class to center content within full-width sections */
@@ -416,7 +419,7 @@
       font-weight: 800;
       text-align: left;
     }
-    
+
     .footer-icons {
       display: flex;
       justify-content: center;
@@ -543,7 +546,7 @@
       footer h4 {
         margin-top: 0 !important; /* Ensure headings don't have default top margin from flex items */
       }
-      
+
       .footer-tagline-moved img {
         max-width: 68%; /* Adjusted for mobile view */
       }
@@ -564,7 +567,7 @@
         box-sizing: border-box;
       }
 
-  
+
 
       /* Mobile Styles for Bookstore Logos in Footer */
       .bookstore-logos {
@@ -713,8 +716,8 @@
                     </div>
                 </div>
             </div>
-        </div> </div> <div class="footer-bottom-bar"> 
-        <div class="content-wrapper"> 
+        </div> </div> <div class="footer-bottom-bar">
+        <div class="content-wrapper">
             <div class="footer-tagline-moved">
                 <img src="tagline.png" alt="Burn the Mask. Speak the Truth.">
             </div>
