--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Download Center | Daren Prince</title>
+  <title>Media Download Center | Daren Prince</title>
   <link rel="icon" type="image/png" href="favicon.png" />
 
   <meta property="og:title" content="Daren Prince | Download Center for Press Kits, Brand Assets & VIP Content" />
