--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Media Download Center | Daren Prince</title>
+  <title>Download Center | Daren Prince</title>
   <link rel="icon" type="image/png" href="favicon.png" />
 
   <meta property="og:title" content="Daren Prince | Download Center for Press Kits, Brand Assets & VIP Content" />
@@ -79,7 +79,8 @@
     #loader img {
       width: 300px;
       max-width: 80%;
-      margin-bottom: 50px;
+      margin-top: 50px; /* NEW: Pushed down from the top slightly */
+      margin-bottom: 20px; /* Adjusted padding between logo and ring */
       animation: pulse 1.5s infinite ease-in-out;
     }
 
@@ -91,13 +92,13 @@
     /* Styles for the Glowing Loader Ring */
     .ring {
       position: relative;
-      width: 100px; /* UPDATED: Half size */
-      height: 100px; /* UPDATED: Half size */
+      width: 100px;
+      height: 100px;
       border: 0px solid #000;
       border-radius: 50%;
       text-align: center;
-      line-height: 100px; /* UPDATED: Half size */
-      font-size: 10px; /* UPDATED: Half size */
+      line-height: 100px;
+      font-size: 10px;
       color: #87BD72;
       text-shadow: 0 0 10px #87BD72;
       box-shadow: 0 0 20px rgba(135, 189, 114, 0.5);
@@ -106,18 +107,21 @@
       align-items: center;
       justify-content: center;
       white-space: nowrap;
+      /* Adjusted for thickness and moved above logo */
+      order: -1; /* NEW: Ensures ring appears above the image in flex column */
+      margin-bottom: 20px; /* NEW: Space between ring and logo */
     }
 
     .ring:before {
       content: '';
       position: absolute;
-      top: -1.5px; /* UPDATED: Half size */
-      left: -1.5px; /* UPDATED: Half size */
+      top: -3px; /* Adjusted from -1.5px for thicker look */
+      left: -3px; /* Adjusted from -1.5px for thicker look */
       width: 100%;
       height: 100%;
-      border: 2px solid transparent; /* UPDATED: Adjusted border thickness */
-      border-top: 2px solid #87BD72; /* UPDATED: Adjusted border thickness */
-      border-right: 2px solid #87BD72; /* UPDATED: Adjusted border thickness */
+      border: 6px solid transparent; /* UPDATED: Thicker border */
+      border-top: 6px solid #87BD72; /* UPDATED: Thicker border */
+      border-right: 6px solid #87BD72; /* UPDATED: Thicker border */
       border-radius: 50%;
       animation: animateC 2s linear infinite;
     }
@@ -125,10 +129,10 @@
     .ring span {
       display: block;
       position: absolute;
-      top: calc(50% - 1px); /* UPDATED: Half size */
+      top: calc(50% - 1px);
       left: 50%;
       width: 50%;
-      height: 2px; /* UPDATED: Half size */
+      height: 2px;
       background: transparent;
       transform-origin: left;
       animation: animate 2s linear infinite;
@@ -137,10 +141,10 @@
     .ring span:before {
       content: '';
       position: absolute;
-      top: -3px; /* UPDATED: Half size */
+      top: -3px;
       right: 0;
-      width: 8px; /* UPDATED: Half size */
-      height: 8px; /* UPDATED: Half size */
+      width: 8px;
+      height: 8px;
       border-radius: 50%;
       background: #87BD72;
       box-shadow: 0 0 20px #87BD72;
@@ -182,18 +186,20 @@
     }
 
     .header-nav .logo img {
-      max-width: 110px;
+      max-width: 120px; /* UPDATED: Slightly larger logo */
       height: auto;
       display: block;
       padding: 0;
-      padding-top: 10;
+      padding-top: 10; /* This was causing cutoff. We'll adjust it. */
+      /* Remove padding-top and rely on align-items/flex properties or margin for spacing */
+      margin-top: 0; /* Ensuring no unexpected top margin */
     }
 
     .header-nav .tagline {
       font-family: 'Urbanist', sans-serif;
       font-weight: 800;
       text-transform: uppercase;
-      color: #587F53;
+      color: rgba(135, 189, 114, 0.9); /* UPDATED: Green color with 90% opacity */
       font-size: 16px;
       margin-left: 25px;
       white-space: nowrap;
@@ -202,6 +208,7 @@
     .logo-and-tagline {
       display: flex;
       align-items: center;
+      padding-top: 0; /* Ensuring no unexpected padding here */
     }
 
     /* Menu Button Styles (Hamburger) */
@@ -652,11 +659,11 @@
 <body>
 
   <div id="loader">
-    <img src="tagline.png" alt="Burn the Mask. Speak the Truth." />
     <div class="ring">
       Loading
       <span></span>
     </div>
+    <img src="tagline.png" alt="Burn the Mask. Speak the Truth." />
   </div>
 
   <nav class="header-nav">
