--- a/index.html
+++ b/index.html
@@ -872,6 +872,9 @@
       });
     });
   </script>
+  <script src="JS/loader.js"></script>
+<script src="JS/force-https.js"></script>
+<script src="JS/mobile-nav.js"></script>
 
 </body>
 </html>
