--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+<script src="JS/force-https.js"></script>
   <!-- Force HTTPS in browsers (as a client-side fallback) -->
 <script>
   if (location.protocol !== 'https:') {
@@ -872,9 +872,9 @@
       });
     });
   </script>
-  <script src="JS/loader.js"></script>
-<script src="JS/force-https.js"></script>
-<script src="JS/mobile-nav.js"></script>
-
+<!-- These go at the bottom of your <body> tag -->
+<script src="JS/loader.js" defer></script>
+<script src="JS/mobile-nav.js" defer></script>
+<script src="JS/newsletter.js" defer></script>
 </body>
 </html>
