--- a/index.html
+++ b/index.html
@@ -749,7 +749,8 @@
                     <p style="font-size: 16px; color: #B8BAB7; margin-bottom: 14px;">
                         Get exclusive updates, content & early access direct from author Daren Prince.
                     </p>
-                    <form action="mailto:press@darenprince.com" method="POST" enctype="text/plain" style="display: flex; flex-wrap: nowrap; align-items: center; gap: 10px;">
+<form id="subscribe-form" novalidate>
+  <form action="/thank-you.html" method="POST">
   <input type="email" name="email" placeholder="Email address" aria-label="Your email address" style="..." required />
   <button type="submit" style="...">Join →</button>
 </form>
