--- a/thank-you.html
+++ b/thank-you.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="force-https.js"></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>You’re In! | Daren Prince</title>
@@ -905,6 +906,9 @@ a.btn.view-btn:hover {
       });
     });
   </script>
-
+  <script src="JS/newsletter.js" defer></script>
+<script src="JS/menu.js" defer></script>
+<script src="JS/loader.js" defer></script>
+<script src="JS/thankyou-redirect.js" defer></script>
 </body>
 </html>
