--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
   <meta name="referrer" content="no-referrer-when-downgrade">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Download Center | Daren Prince</title>
+  <title>Media Download Center | Author Daren Prince</title>
   <link rel="icon" type="image/png" href="favicon.png" />
   <meta property="og:title" content="Daren Prince | Download Center for Press Kits, Brand Assets & VIP Content" />
   <meta property="og:description" content="Access essential press kits, images, promotional content, author bios, and exclusive content from author Daren Prince." />
@@ -145,7 +145,6 @@
       0% { transform: rotate(45deg); }
       100% { transform: rotate(405deg); }
     }
-
     /* === NAVIGATION FIXES BASED ON USER FEEDBACK === */
     .header-nav {
       background-color: #212121;
@@ -227,6 +226,7 @@
     .menu {
       display: flex;
       align-items: center;
+      width: 100%;
       gap: 32px;
       margin: 0;
       padding: 0;
@@ -236,7 +236,6 @@
       position: relative;
       top: auto;
       left: auto;
-      width: 100%;
       transform: translateX(0);
     }
     .menu li {
@@ -314,8 +313,7 @@
         margin-left: 0;
       }
     }
-    /* End of navigation styles */
-
+    /* --- End of navigation styles --- */
     header {
       text-align: center;
       padding: 20px;
@@ -622,7 +620,7 @@
       </a>
       <div class="file-meta">
         <a href="press-kit.html">
-            <div class="file-name">Game On! – Official Press Kit & Brand Guidelines (US/EU Version)</div>
+          <div class="file-name">Game On! – Official Press Kit & Brand Guidelines (US/EU Version)</div>
         </a>
         <p style="font-size: 14px; margin-bottom: 14px; color: #D5D5D5;">
           Includes high resolution images, author bio, metadata, press releases, author bios, brand identity, and everything media pros need.
@@ -720,14 +718,3 @@
             <a href="#" style="color:#87BD72; text-decoration:none; margin: 0 8px;">Compliance</a>
             |
             <a href="mailto:contact@darenprince.com" style="color:#87BD72; text-decoration:none; margin: 0 8px;">Contact</a>
-          </p>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-  <script src="JS/loader.js" defer></script>
-  <script src="JS/mobile-nav.js" defer></script>
-  <script src="JS/newsletter.js" defer></script>
-</body>
-</html>
